fixed layout bugs

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -82,35 +82,31 @@ header {
 }
 
 .open {
-    .hamburger {
-        span:first-child {
-            transform: translate(0, .5rem) rotate(45deg);
-            transition: transform $transition ease-in-out;
-        }
-        span:nth-child(2) {
-            opacity: 0;
-            transition: opacity $transition ease-in-out;
-        }
-        span:last-child {
-            transform: translate(0, -1rem) rotate(-45deg);
-            transition: transform $transition ease-in-out;
-        }
+    span:first-child {
+        transform: translate(0, .5rem) rotate(45deg);
+        transition: transform $transition ease-in-out;
+    }
+    span:nth-child(2) {
+        opacity: 0;
+        transition: opacity $transition ease-in-out;
+    }
+    span:last-child {
+        transform: translate(0, -1rem) rotate(-45deg);
+        transition: transform $transition ease-in-out;
     }
 }
 
 .closed {
-    .hamburger {
-        span:first-child {
-            transform: translate(0, 0) rotate(0deg);
-            transition: transform $transition ease-in-out;
-        }
-        span:nth-child(2) {
-            opacity: 1;
-            transition: opacity $transition ease-in-out;
-        }
-        span:last-child {
-            transform: translate(0, 0) rotate(0deg);
-            transition: transform $transition ease-in-out;
-        }
+    span:first-child {
+        transform: translate(0, 0) rotate(0deg);
+        transition: transform $transition ease-in-out;
+    }
+    span:nth-child(2) {
+        opacity: 1;
+        transition: opacity $transition ease-in-out;
+    }
+    span:last-child {
+        transform: translate(0, 0) rotate(0deg);
+        transition: transform $transition ease-in-out;
     }
 }
