--- a/css/_page-contact.scss
+++ b/css/_page-contact.scss
@@ -1,4 +1,5 @@
 #contact {
+    margin-top: 10vh;
     .grid-content {
         min-height: 64.8vh;
         @include grid-2(false);
